--- a/index.html
+++ b/index.html
@@ -8,22 +8,53 @@
     <link rel="stylesheet" href="assets/css/custom.min.css">
     <link rel="stylesheet" href="assets/css/test.scss">
     <style>
+       body {
+    background-image: url("assets/img/6e29209a7.jpg");
+    background-color: #cccccc;
+  }
       .logo-left{
-        margin-left: 50px;
+        margin-left: 180px;
       }
       .bg-black{
         background-color: black;
       }
       .uppercase{
         text-transform: uppercase;
+        font-size: 18px;
+        margin-left: 40px;
       }
+      .nav-height{
+        height: 64px;
+      }
+      .footer {
+        background: #081b28;
+    color: #fff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    vertical-align: middle;
+    margin-bottom: 50px;
+    position: sticky;
+   left: 0;
+   width: 100%;
+}
+.background-img{
+  position: absolute;
+}
+.main-content{
+  margin-top: 400px;
+  margin-bottom: 0px;
+  height: 500px;
+  width: 100%;
+  background-color: white;
+}
+
 
     </style>
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand bg-black">
+  <nav class="navbar navbar-expand bg-black nav-height">
     <a class="navbar-brand logo-left" href="#"><img src="assets/img/hr-logo.png" alt="logo" width="216" height="50"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -31,7 +62,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav uppercase">
         <li class="nav-item active">
-          <a class="nav-link text-white" href="#">Explore <span class="sr-only">(current)</span></a>
+          <a class="nav-link text-white mr-3" href="#">Explore <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#">News</a>
@@ -39,9 +70,14 @@
       </ul>
     </div>
   </nav>
+  <div class="background-img"></div>
+  <div class="bg-white main-content"></div>
 
-
-    
+ 
+  <div class="footer bg-dark">
+    <p>Footer</p>
+  </div>
+  
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="assets/js/bootstrap.js"></script>
 </body>
