--- a/product-page/index.html
+++ b/product-page/index.html
@@ -24,23 +24,16 @@
       <!-- Right Column -->
       <div class="right-column">
 
-        <!-- Product Description -->
-        <div class="product-description">
-          <span>Headphones</span>
-          <h1>Beats EP</h1>
-          <p>The preferred choice of a vast range of acclaimed DJs. Punchy, bass-focused sound and high isolation. Sturdy headband and on-ear cushions suitable for live performance</p>
-        </div>
-
         <!-- Product Configuration -->
         <div class="product-configuration">
 
           <!-- Product Color -->
           <div class="product-color">
-            <span>Color</span>
+            <span>Head</span>
 
             <div class="color-choose">
               <div>
-                <input data-image="red" type="radio" id="red" name="color" value="red" checked>
+                <input data-image="red" type="radio" id="red" name="color" value="red">
                 <label for="red"><span></span></label>
               </div>
               <div>
@@ -56,46 +49,42 @@
 
 
       <!-- Container 1-->    
-    <main class="container1">
-      <div class="left-column1">
-        <img data-image="red" src="images/Bodies/Chubby_breasts.png" alt="">
+    <main class="container">
+      <div class="left-column">
+        <img data-image="purple" src="images/Bodies/Chubby_breasts.png" alt="">
+        <img data-image="orange" src="images/Bodies/Curvy_breasts.png" alt="">
+        <img data-image="yellow" src="images/Bodies/Masculine_breasts.png" alt="">
+        <img data-image="green" src="images/Bodies/Skinny_breasts.png" alt="">
       </div>
 
 
       <!-- Right Column -->
-      <div class="right-column1">
-
-        <!-- Product Description -->
-        <div class="product-description1">
-          <span>Headphones</span>
-          <h1>Beats EP</h1>
-          <p>The preferred choice of a vast range of acclaimed DJs. Punchy, bass-focused sound and high isolation. Sturdy headband and on-ear cushions suitable for live performance</p>
-        </div>
+      <div class="right-column">
 
         <!-- Product Configuration -->
-        <div class="product-configuration1">
+        <div class="product-configuration">
 
           <!-- Product Color -->
-          <div class="product-color1">
-            <span>Color</span>
+          <div class="product-color">
+            <span>Body</span>
 
-            <div class="color-choose1">
+            <div class="color-choose">
               <div>
-                <input data-image="red" type="radio" id="red" name="color" value="red" checked>
-                <label for="red"><span></span></label>
+                <input data-image="purple" type="radio" id="purple" name="color" value="purple">
+                <label for="purple"><span></span></label>
               </div>
               <div>
-                <input data-image="blue" type="radio" id="blue" name="color" value="blue">
-                <label for="blue"><span></span></label>
+                <input data-image="orange" type="radio" id="orange" name="color" value="orange">
+                <label for="orange"><span></span></label>
               </div>
               <div>
-                <input data-image="black" type="radio" id="black" name="color" value="black">
-                <label for="black"><span></span></label>
+                <input data-image="yellow" type="radio" id="yellow" name="color" value="yellow">
+                <label for="yellow"><span></span></label>
               </div>
               <br>
               <div>
-                <input data-image="chubby" type="radio" id="chubby" name="color" value="chubby" checked>
-                <label for="chubby"><span></span></label>
+                <input data-image="green" type="radio" id="green" name="color" value="green">
+                <label for="green"><span></span></label>
               </div>
             </div>
 
