--- a/product-page/index.html
+++ b/product-page/index.html
@@ -13,8 +13,49 @@
   </head>
 
   <body>
-    <main class="container">
+    <!-- Container 2-->    
+    <main class="container2">
+      <div class="left-column">
+        <img data-image="magenta" src="images/Head/hair1.png" alt="">
+        <img data-image="winepink" src="images/Head/hair_2.png" alt="">
+        <img data-image="cyan" src="images/Head/hair_3.png" alt="">
+        <img data-image="mint" src="images/Head/hair_4.png" alt="">
+      </div>
 
+
+      <!-- Right Column -->
+      <div class="right-column2">
+
+        <!-- Product Configuration -->
+        <div class="product-configuration">
+
+          <!-- Product Color -->
+          <div class="product-color">
+            <span>Hair</span>
+
+            <div class="color-choose">
+              <div>
+                <input data-image="magenta" type="radio" id="magenta" name="color" value="magenta">
+                <label for="magenta"><span></span></label>
+              </div>
+              <div>
+                <input data-image="winepink" type="radio" id="winepink" name="color" value="winepink">
+                <label for="winepink"><span></span></label>
+              </div>
+              <div>
+                <input data-image="cyan" type="radio" id="cyan" name="color" value="cyan">
+                <label for="cyan"><span></span></label>
+              </div>
+              <div>
+                <input data-image="mint" type="radio" id="mint" name="color" value="mint">
+                <label for="mint"><span></span></label>
+              </div>
+            </div>
+
+          </div>
+    </main>
+
+    <main class="container">
       <!-- Left Column / Headphones Image -->
       <div class="left-column">
         <img data-image="black" src="images/Bodies/_Head_base.png" alt="">
@@ -49,17 +90,21 @@
 
 
       <!-- Container 1-->    
-    <main class="container">
+    <main class="container1">
       <div class="left-column">
         <img data-image="purple" src="images/Bodies/Chubby_breasts.png" alt="">
+        <img data-image="dpurple" src="images/Bodies/Chubby.png" alt="">
         <img data-image="orange" src="images/Bodies/Curvy_breasts.png" alt="">
+        <img data-image="dorange" src="images/Bodies/Curvy.png" alt="">
         <img data-image="yellow" src="images/Bodies/Masculine_breasts.png" alt="">
+        <img data-image="lblue" src="images/Bodies/Masculine.png" alt="">
         <img data-image="green" src="images/Bodies/Skinny_breasts.png" alt="">
+        <img data-image="pink" src="images/Bodies/Skinny.png" alt="">
       </div>
 
 
       <!-- Right Column -->
-      <div class="right-column">
+      <div class="right-column1">
 
         <!-- Product Configuration -->
         <div class="product-configuration">
@@ -74,23 +119,40 @@
                 <label for="purple"><span></span></label>
               </div>
               <div>
+                <input data-image="dpurple" type="radio" id="dpurple" name="color" value="dpurple">
+                <label for="dpurple"><span></span></label>
+              </div>
+              <div>
                 <input data-image="orange" type="radio" id="orange" name="color" value="orange">
                 <label for="orange"><span></span></label>
               </div>
               <div>
+                <input data-image="dorange" type="radio" id="dorange" name="color" value="dorange">
+                <label for="dorange"><span></span></label>
+              </div>
+              <div>
                 <input data-image="yellow" type="radio" id="yellow" name="color" value="yellow">
                 <label for="yellow"><span></span></label>
+              </div>
+              <div>
+                <input data-image="lblue" type="radio" id="lblue" name="color" value="lblue">
+                <label for="lblue"><span></span></label>
               </div>
               <br>
               <div>
                 <input data-image="green" type="radio" id="green" name="color" value="green">
                 <label for="green"><span></span></label>
               </div>
+              <div>
+                <input data-image="pink" type="radio" id="pink" name="color" value="pink">
+                <label for="pink"><span></span></label>
+              </div>
             </div>
 
           </div>
-    </main>
+        </main>
 
+        
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
     <script src="script.js" charset="utf-8"></script>
