--- a/product-page/index.html
+++ b/product-page/index.html
@@ -1,160 +1,138 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tutorial</title>
-    <!-- Fonts -->
+    <title>Horse Reality</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-    <!-- CSS -->
     <link href="style.css" rel="stylesheet">
-    <meta name="robots" content="noindex,follow" />
+    <meta name="robots" content="noindex" />
+</head>
 
-  </head>
-
-  <body>
-    <!-- Container 2-->    
+<body>
     <main class="container2">
-      <div class="left-column">
-        <img data-image="magenta" src="images/Head/hair1.png" alt="">
-        <img data-image="winepink" src="images/Head/hair_2.png" alt="">
-        <img data-image="cyan" src="images/Head/hair_3.png" alt="">
-        <img data-image="mint" src="images/Head/hair_4.png" alt="">
-      </div>
+        <div class="left-column">
+            <img data-image="magenta" src="images/Head/hair1.png" alt="">
+            <img data-image="winepink" src="images/Head/hair_2.png" alt="">
+            <img data-image="cyan" src="images/Head/hair_3.png" alt="">
+            <img data-image="mint" src="images/Head/hair_4.png" alt="">
+        </div>
 
-
-      <!-- Right Column -->
-      <div class="right-column2">
-
-        <!-- Product Configuration -->
-        <div class="product-configuration">
-
-          <!-- Product Color -->
-          <div class="product-color">
-            <span>Hair</span>
-
-            <div class="color-choose">
-              <div>
-                <input data-image="magenta" type="radio" id="magenta" name="color" value="magenta">
-                <label for="magenta"><span></span></label>
-              </div>
-              <div>
-                <input data-image="winepink" type="radio" id="winepink" name="color" value="winepink">
-                <label for="winepink"><span></span></label>
-              </div>
-              <div>
-                <input data-image="cyan" type="radio" id="cyan" name="color" value="cyan">
-                <label for="cyan"><span></span></label>
-              </div>
-              <div>
-                <input data-image="mint" type="radio" id="mint" name="color" value="mint">
-                <label for="mint"><span></span></label>
-              </div>
+        <div class="right-column2">
+            <div class="product-configuration">
+                <div class="product-color">
+                    <span>Hair</span>
+                    <div class="color-choose">
+                        <div>
+                            <input data-image="magenta" type="radio" id="magenta" name="color" value="magenta">
+                            <label for="magenta"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="winepink" type="radio" id="winepink" name="color" value="winepink">
+                            <label for="winepink"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="cyan" type="radio" id="cyan" name="color" value="cyan">
+                            <label for="cyan"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="mint" type="radio" id="mint" name="color" value="mint">
+                            <label for="mint"><span></span></label>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-          </div>
+        </div>
     </main>
 
     <main class="container">
-      <!-- Left Column / Headphones Image -->
-      <div class="left-column">
-        <img data-image="black" src="images/Bodies/_Head_base.png" alt="">
-      </div>
+        <div class="left-column">
+            <img data-image="black" src="images/Bodies/_Head_base.png" alt="headbase">
+        </div>
 
-
-      <!-- Right Column -->
-      <div class="right-column">
-
-        <!-- Product Configuration -->
-        <div class="product-configuration">
-
-          <!-- Product Color -->
-          <div class="product-color">
-            <span>Head</span>
-
-            <div class="color-choose">
-              <div>
-                <input data-image="red" type="radio" id="red" name="color" value="red">
-                <label for="red"><span></span></label>
-              </div>
-              <div>
-                <input data-image="blue" type="radio" id="blue" name="color" value="blue">
-                <label for="blue"><span></span></label>
-              </div>
-              <div>
-                <input data-image="black" type="radio" id="black" name="color" value="black">
-                <label for="black"><span></span></label>
-              </div>
-          </div>
+        <div class="right-column">
+            <div class="product-configuration">
+                <div class="product-color">
+                    <span>Head</span>
+                    <div class="color-choose">
+                        <div>
+                            <input data-image="red" type="radio" id="red" name="color" value="red">
+                            <label for="red"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="blue" type="radio" id="blue" name="color" value="blue">
+                            <label for="blue"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="black" type="radio" id="black" name="color" value="black">
+                            <label for="black"><span></span></label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
-
-      <!-- Container 1-->    
     <main class="container1">
-      <div class="left-column">
-        <img data-image="purple" src="images/Bodies/Chubby_breasts.png" alt="">
-        <img data-image="dpurple" src="images/Bodies/Chubby.png" alt="">
-        <img data-image="orange" src="images/Bodies/Curvy_breasts.png" alt="">
-        <img data-image="dorange" src="images/Bodies/Curvy.png" alt="">
-        <img data-image="yellow" src="images/Bodies/Masculine_breasts.png" alt="">
-        <img data-image="lblue" src="images/Bodies/Masculine.png" alt="">
-        <img data-image="green" src="images/Bodies/Skinny_breasts.png" alt="">
-        <img data-image="pink" src="images/Bodies/Skinny.png" alt="">
-      </div>
+        <div class="left-column">
+            <img data-image="purple" src="images/Bodies/Chubby_breasts.png" alt="Chubby_breasts">
+            <img data-image="dpurple" src="images/Bodies/Chubby.png" alt="Chubby">
+            <img data-image="orange" src="images/Bodies/Curvy_breasts.png" alt="Curvy_breasts">
+            <img data-image="dorange" src="images/Bodies/Curvy.png" alt="Curvy">
+            <img data-image="yellow" src="images/Bodies/Masculine_breasts.png" alt="Masculine_breasts">
+            <img data-image="lblue" src="images/Bodies/Masculine.png" alt="Masculine">
+            <img data-image="green" src="images/Bodies/Skinny_breasts.png" alt="Skinny_breasts">
+            <img data-image="pink" src="images/Bodies/Skinny.png" alt="Skinny">
+        </div>
 
-
-      <!-- Right Column -->
-      <div class="right-column1">
-
-        <!-- Product Configuration -->
-        <div class="product-configuration">
-
-          <!-- Product Color -->
-          <div class="product-color">
-            <span>Body</span>
-
-            <div class="color-choose">
-              <div>
-                <input data-image="purple" type="radio" id="purple" name="color" value="purple">
-                <label for="purple"><span></span></label>
-              </div>
-              <div>
-                <input data-image="dpurple" type="radio" id="dpurple" name="color" value="dpurple">
-                <label for="dpurple"><span></span></label>
-              </div>
-              <div>
-                <input data-image="orange" type="radio" id="orange" name="color" value="orange">
-                <label for="orange"><span></span></label>
-              </div>
-              <div>
-                <input data-image="dorange" type="radio" id="dorange" name="color" value="dorange">
-                <label for="dorange"><span></span></label>
-              </div>
-              <div>
-                <input data-image="yellow" type="radio" id="yellow" name="color" value="yellow">
-                <label for="yellow"><span></span></label>
-              </div>
-              <div>
-                <input data-image="lblue" type="radio" id="lblue" name="color" value="lblue">
-                <label for="lblue"><span></span></label>
-              </div>
-              <br>
-              <div>
-                <input data-image="green" type="radio" id="green" name="color" value="green">
-                <label for="green"><span></span></label>
-              </div>
-              <div>
-                <input data-image="pink" type="radio" id="pink" name="color" value="pink">
-                <label for="pink"><span></span></label>
-              </div>
+        <div class="right-column1">
+            <div class="product-configuration">
+                <div class="product-color">
+                    <span>Body</span>
+                    <div class="color-choose">
+                        <div>
+                            <input data-image="purple" type="radio" id="purple" name="color" value="purple">
+                            <label for="purple"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="dpurple" type="radio" id="dpurple" name="color" value="dpurple">
+                            <label for="dpurple"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="orange" type="radio" id="orange" name="color" value="orange">
+                            <label for="orange"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="dorange" type="radio" id="dorange" name="color" value="dorange">
+                            <label for="dorange"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="yellow" type="radio" id="yellow" name="color" value="yellow">
+                            <label for="yellow"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="lblue" type="radio" id="lblue" name="color" value="lblue">
+                            <label for="lblue"><span></span></label>
+                        </div>
+                        <br>
+                        <div>
+                            <input data-image="green" type="radio" id="green" name="color" value="green">
+                            <label for="green"><span></span></label>
+                        </div>
+                        <div>
+                            <input data-image="pink" type="radio" id="pink" name="color" value="pink">
+                            <label for="pink"><span></span></label>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+    </main>
 
-          </div>
-        </main>
-
-        
-    <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
     <script src="script.js" charset="utf-8"></script>
-  </body>
+
+</body>
+
 </html>
