--- a/product-page/index.html
+++ b/product-page/index.html
@@ -13,10 +13,10 @@
 <body>
     <main class="container2">
         <div class="left-column">
-            <img data-image="magenta" src="images/Head/hair1.png" alt="">
-            <img data-image="winepink" src="images/Head/hair_2.png" alt="">
-            <img data-image="cyan" src="images/Head/hair_3.png" alt="">
-            <img data-image="mint" src="images/Head/hair_4.png" alt="">
+            <img data-image="magenta" src="images/Head/hair1.png" alt="" id="hair">
+            <img data-image="winepink" src="images/Head/hair_2.png" alt="" id="hair">
+            <img data-image="cyan" src="images/Head/hair_3.png" alt="" id="hair">
+            <img data-image="mint" src="images/Head/hair_4.png" alt="" id="hair">
         </div>
 
         <div class="right-column2">
@@ -76,14 +76,14 @@
 
     <main class="container1">
         <div class="left-column">
-            <img data-image="purple" src="images/Bodies/Chubby_breasts.png" alt="Chubby_breasts">
-            <img data-image="dpurple" src="images/Bodies/Chubby.png" alt="Chubby">
-            <img data-image="orange" src="images/Bodies/Curvy_breasts.png" alt="Curvy_breasts">
+            <img data-image="purple" src="images/Bodies/Chubby_breasts.png" alt="Chubby_breasts" id="lichaam">
+            <img data-image="dpurple" src="images/Bodies/Chubby.png" alt="Chubby" id="lichaam">
+            <img data-image="orange" src="images/Bodies/Curvy_breasts.png" alt="Curvy_breasts" id="lichaam">
             <img data-image="dorange" src="images/Bodies/Curvy.png" alt="Curvy">
-            <img data-image="yellow" src="images/Bodies/Masculine_breasts.png" alt="Masculine_breasts">
-            <img data-image="lblue" src="images/Bodies/Masculine.png" alt="Masculine">
-            <img data-image="green" src="images/Bodies/Skinny_breasts.png" alt="Skinny_breasts">
-            <img data-image="pink" src="images/Bodies/Skinny.png" alt="Skinny">
+            <img data-image="yellow" src="images/Bodies/Masculine_breasts.png" alt="Masculine_breasts" id="lichaam">
+            <img data-image="lblue" src="images/Bodies/Masculine.png" alt="Masculine" id="lichaam">
+            <img data-image="green" src="images/Bodies/Skinny_breasts.png" alt="Skinny_breasts" id="lichaam">
+            <img data-image="pink" src="images/Bodies/Skinny.png" alt="Skinny" id="lichaam">
         </div>
 
         <div class="right-column1">
